sorted out z-index issue with header showing underneath square shapes

--- a/css/ui/_header.scss
+++ b/css/ui/_header.scss
@@ -14,6 +14,8 @@ header {
 .event--overview {
   width: 800px;
   margin: 0 auto;
+  position: relative;
+  z-index: 10;
 }
 
 .event--snapshot {
